--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>Kevin Ouyang</title>
+        <meta name="viewport" content= "width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <script src="split.js" type="text/javascript"></script>
 
@@ -51,7 +52,7 @@
             <article></article>
             <article></article>
 
-            <article><h1>(ꈍ ᴗ ꈍ)</h1></article>
+            <article><h1 class="no-wrap">(ꈍ ᴗ ꈍ)</h1></article>
 
         </section>
     </body>
