--- a/index.html
+++ b/index.html
@@ -32,17 +32,14 @@
                 <h3>i’m a computer scientist and senior at Brown University, where my research is advised by Professor Jeff Huang at the Human-Computer Interaction Lab. i’m the main developer and a Research Assistant for Self-E, a mobile user system that leverages remotely-captured user data to enable self-discovery.
                     <br />
                     <br />
-                    my interests span personal informatics, the politics of data, secure communication systems, social media, surveillance studies, and critical infrastructure studies. my long-term goal is to distill insights from feminist sts, critical race, and media infrastructure studies to build technical systems that are innovative, accountable, and sensitive to the human experience. as a researcher i’m driven by the notion of “studying up.”
-                </h3>
+                    my interests span personal informatics, the politics of data, secure communication systems, social media, surveillance studies, and critical infrastructure studies. my long-term goal is to distill insights from feminist sts and media infrastructure studies to build technical systems that are innovative, accountable, and sensitive to the human experience. as a researcher i’m driven by the notion of “studying up.”                </h3>
             </article>
 
             <article class="text-box">
                 <h3>
-                    this spring I will also be TAing CS for Social Good, where we will engage in some of the ethical considerations that arise within the field of computing while also delivering a final projects in partnership with local non-profits. i have previously TA’d the introductory CS sequence (CS15 and CS16).
+                    this spring I will also be TAing CS for Social Good, where we will engage in some of the ethical considerations that arise within the field of computing, while also delivering final projects in partnership with local non-profits. i’ve previously TA’d the introductory CS sequence (CS15 and CS16).                     <br />
                     <br />
-                    <br />
-                    this past summer i had a fascinating and  eye-opening experience interning at Facebook in the machine learning infrastructure org.
-                    <br />
+                    this past summer i was an intern at Facebook in the machine learning infrastructure org.                    <br />
                     <br />
                     i’m pretty much always happy to grab a cup of tea. in my free time i like to cook, read, and make collages. see my resume, or my CV
 
