--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
 <html>
 
     <head>
         <title>Kevin Ouyang</title>
         <meta name="viewport" content= "width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="res/style.css">
         <script src="split.js" type="text/javascript"></script>
 
     </head>
     <body onload="Justify();">
-        <!-- <h1>Just testing this works!</h1> -->
         <section class="center">
 
             <article class="title-box">
@@ -21,30 +22,20 @@
 
             <article></article>
 
-            <article class="subtitle-box">
-                <h2>technical HCI researcher and software engineer</h2>
-            </article>
-
-            <article></article>
-            <article></article>
-
             <article class="text-box">
-                <h3>i’m a software developer and recent graduate from Brown University, where my research is advised by Professor Jeff Huang at the Human-Computer Interaction Lab. i’m the main developer for Self-E, a mobile user system that leverages remotely-captured user data to enable self-discovery. currently, i'm a blockchain developer intern at BlockApps.
-                    <br />
-                    <br />
-                    i have research interests that are technical (implementation of novel user systems) as well as ones rooted in the humanities and social sciences (infrastructure studies, science/technology studies). one long-term goal of mine is to feel i am living up to what it means to cultivate a critical technical practice.            </h3>
+                <h3>i’m a software engineer and recent graduate from Brown University, where my research was advised by <a href="https://jeffhuang.com/">Professor Jeff Huang</a> at the <a href="https://hci.cs.brown.edu/">Human-Computer Interaction Research Group</a>. while there, i worked on <a href="http://selfe.cs.brown.edu/">Self-E</a>, a mobile user system that leverages remotely-captured user data to run self-experiments and enable self-discovery. currently, i'm a blockchain developer intern at <a href="https://blockapps.net/">BlockApps</a>. i've previously interned at Facebook in AI Infrastructure.
             </article>
+
+            <article></article>
 
             <article class="text-box">
                 <h3>
-                    in my free time i like to cook. if i've cooked for you, then please endorse me on <a href="https://www.linkedin.com/in/kevinhouyang/">linkedin</a>
+                  <a href="res/CV.pdf">cv</a> | <a href="res/Resume.pdf">resume</a> | <a href="res/Thesis.pdf">senior thesis</a> | <a href="https://github.com/kevinhouyang">github</a> | <a href="https://www.linkedin.com/in/kevinhouyang/">linkedin</a><br /><br /><br />
                 </h3>
-
             </article>
+            
             <article></article>
             <article></article>
-
-            <article><h1 class="no-wrap">(ꈍ ᴗ ꈍ)</h1></article>
 
         </section>
     </body>
