--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <article class="text-box">
                 <h3>
-                  <a href="res/CV.pdf">cv</a> | <a href="res/Resume.pdf">resume</a> | <a href="res/Thesis.pdf">senior thesis</a> | <a href="https://github.com/kevinhouyang">github</a> | <a href="https://www.linkedin.com/in/kevinhouyang/">linkedin</a><br /><br /><br />
+                  <a href="res/KevinOuyangResumeF2020.pdf">resume</a> | <a href="res/Thesis.pdf">senior thesis</a> | <a href="https://github.com/kevinhouyang">github</a> | <a href="https://www.linkedin.com/in/kevinhouyang/">linkedin</a><br /><br /><br />
                 </h3>
             </article>
 
