portrait, resume, color scheme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     </head>
     <body onload="Justify();">
-        <section class="center">
+        <section class="center top-padding">
 
             <article class="title-box">
                 <div class="bounding-box">
@@ -20,7 +20,7 @@
                 </div>
             </article>
 
-            <article></article>
+            <article class="portrait-box"><img src="res/kevintransparent.png" alt="portrait" height="400" weight="400"></article>
 
             <article class="text-box">
                 <h3>i’m a software engineer and recent graduate from Brown University, where my research was advised by <a href="https://jeffhuang.com/">Professor Jeff Huang</a> at the <a href="https://hci.cs.brown.edu/">Human-Computer Interaction Research Group</a>. while there, i worked on <a href="http://selfe.cs.brown.edu/">Self-E</a>, a mobile user system that leverages remotely-captured user data to run self-experiments and enable self-discovery. currently, i'm a blockchain developer intern at <a href="https://blockapps.net/">BlockApps</a>. i've previously interned at Facebook in AI Infrastructure.</h3>
@@ -30,7 +30,7 @@
 
             <article class="text-box">
                 <h3>
-                  <a href="res/KevinOuyangResumeF2020.pdf">resume</a> | <a href="res/Thesis.pdf">senior thesis</a> | <a href="https://github.com/kevinhouyang">github</a> | <a href="https://www.linkedin.com/in/kevinhouyang/">linkedin</a><br /><br /><br />
+                  <a href="res/Resume.pdf">resume</a> | <a href="res/Thesis.pdf">senior thesis</a> | <a href="https://github.com/kevinhouyang">github</a> | <a href="https://www.linkedin.com/in/kevinhouyang/">linkedin</a><br /><br /><br />
                 </h3>
             </article>
 
