--- a/index.html
+++ b/index.html
@@ -20,17 +20,15 @@
                 </div>
             </article>
 
-            <article class="portrait-box"><img src="res/kevintransparent.png" alt="portrait" height="400" weight="400"></article>
-
             <article class="text-box">
-                <h3>i’m a software engineer and recent graduate from Brown University, where my research was advised by <a href="https://jeffhuang.com/">Professor Jeff Huang</a> at the <a href="https://hci.cs.brown.edu/">Human-Computer Interaction Research Group</a>. while there, i worked on <a href="http://selfe.cs.brown.edu/">Self-E</a>, a mobile user system that leverages remotely-captured user data to run self-experiments and enable self-discovery. currently, i'm a blockchain developer intern at <a href="https://blockapps.net/">BlockApps</a>. i've previously interned at Facebook in AI Infrastructure.</h3>
+                <h3>i'm a software engineer and aspiring researcher. i graduated from Brown University in 2020, where my research was advised by <a href="https://jeffhuang.com/">Professor Jeff Huang</a> at the <a href="https://hci.cs.brown.edu/">Human-Computer Interaction Research Group</a>. while there, i worked on <a href="http://selfe.cs.brown.edu/">Self-E</a>, a mobile user system that leverages remotely-captured user data to run self-experiments and enable self-discovery. currently i do data engineering at <a href="https://www.anomalo.com/">Anomalo</a>
             </article>
 
             <article></article>
 
             <article class="text-box">
                 <h3>
-                  <a href="res/Resume.pdf">resume</a> | <a href="res/Thesis.pdf">senior thesis</a> | <a href="https://github.com/kevinhouyang">github</a> | <a href="https://www.linkedin.com/in/kevinhouyang/">linkedin</a><br /><br /><br />
+                  <a href="res/CV.pdf">cv</a> | <a href="https://dl.acm.org/doi/10.1145/3411764.3445100">Self-E CHI '21</a> | <a href="https://github.com/kevinhouyang">github</a> | <a href="https://www.linkedin.com/in/kevinhouyang/">linkedin</a><br /><br /><br />
                 </h3>
             </article>
 
